--- a/src/styles.less
+++ b/src/styles.less
@@ -1,4 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 
 body {
+
+  background: transparent url("/assets/ac.jpeg") no-repeat center center / 100 auto;
 }
