--- a/src/styles.less
+++ b/src/styles.less
@@ -1,6 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 
-body {
-
-  background: transparent url("/assets/ac.jpeg") no-repeat center center / 100 auto;
-}
+//body {
+//
+//  background:  url("/assets/ac.jpeg") no-repeat center center / 100 auto;
+//}
