AC background; dark theme

--- a/src/styles.less
+++ b/src/styles.less
@@ -4,3 +4,16 @@
 //
 //  background:  url("/assets/ac.jpeg") no-repeat center center / 100 auto;
 //}
+
+body {
+  background: #010301 url('assets/ac.jpeg') no-repeat;
+  background-size: 2000px;
+}
+
+.trx {
+  background-color: rgba(255,255,255,0.1);
+}
+
+html {
+  //font-size: 26px;
+}
