--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,3 +1,18 @@
-<p>
-  contact works!
-</p>
+<div class="row">
+  <div class="col-md-6 trx">
+  </div>
+  <div class="col-md-6">
+    <div class="card">
+      <div class="card-header bg-dark h5">
+        Contact
+      </div>
+      <div class="card-body bg-dark">
+        Name: {{name}}
+      </div>
+      <div class="card-footer bg-dark text-right">
+        <button class="btn btn-outline-info" (click)="someAction()"> action! </button>
+      </div>
+    </div>
+
+  </div>
+</div>
