--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,3 +1,29 @@
-<p>
-  contact works!
-</p>
+
+<div class="row">
+  <div class="col-md-8">
+    Userzy: {{usersService.userzy}}
+    <ul>
+      <li *ngFor="let u of usersService.userzy"> user: {{u}}</li>
+    </ul>
+
+    <app-progress></app-progress>
+
+  </div>
+
+  <div class="col-md-4">
+
+    <div class="card">
+      <div class="card-header h4 bg-dark">
+        Dane kontaktowe
+      </div>
+      <div class="card-body bg-dark">
+        Adres: {{adres}}, {{houseNumber + houseNumber}} {{x}}
+      </div>
+      <div class="card-footer bg-dark text-right">
+        <button class="btn btn-outline-info" (click)="mojaAkcja()"> Click me!</button>
+      </div>
+    </div>
+
+
+  </div>
+</div>
