--- a/src/app/progress/progress.component.html
+++ b/src/app/progress/progress.component.html
@@ -1,1 +1,9 @@
-(progress....)
+
+<div class="card mt-1">
+  <div class="card-header h5">Edytor kontaktu</div>
+  <div class="card-body">
+    Obecny alias: {{name}} <br>
+    <button class="btn btn-outline-info" (click)="addS()"> dodaj 's' </button>
+    <button class="btn btn-outline-info" (click)="addKontaktX()"> dodaj 'x' do kontaktu</button>
+  </div>
+</div>
