--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -19,6 +19,10 @@
         <a class="nav-link" href="#" routerLinkActive="active"  [routerLink]="['/contact']" >Contact
           <span class="sr-only">(contact)</span></a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#" routerLinkActive="active"  [routerLink]="['/indeks']" > IndeksOcen
+          <span class="sr-only">(indeks)</span></a>
+      </li>
     </ul>
   </div>
 </nav>
