Maszyna do pisania w wersji bez usuwania

--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -21,6 +21,8 @@
       </div>
       <div class="card-footer bg-dark text-right">
         <button class="btn btn-outline-info" (click)="mojaAkcja()"> Click me!</button>
+        <app-zegar></app-zegar>
+
       </div>
     </div>
 
