--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,20 @@
-<p>
-  home works!
-</p>
+<div class="row">
+  <div class="col-md-3"></div>
+  <div class="col-md-6">
+    <div class="card">
+      <div class="card-header bg-dark h5">
+        Strona główna
+      </div>
+      <div class="card-body bg-dark">
+
+        <app-zegar></app-zegar>
+
+
+      </div>
+    </div>
+  </div>
+  <div class="col-md-3">
+    <app-typewriter></app-typewriter>
+  </div>
+</div>
+
