Z wycinaniem ostatniej litery

--- a/src/app/typewriter/typewriter.component.html
+++ b/src/app/typewriter/typewriter.component.html
@@ -6,6 +6,7 @@
   <div class="card-footer bg-dark text-center">
     <button class="btn btn-outline-info ml-1" (click)="dodajNapis('a')"> a </button>
     <button class="btn btn-outline-info ml-1" (click)="dodajNapis('b')"> b </button>
-    <button class="btn btn-outline-info ml-1">  <i class="fas fa-arrow-left"></i>  </button>
+    <button class="btn btn-outline-info ml-1" (click)="utnijOstatnia()">
+      <i class="fas fa-arrow-left"></i>  </button>
   </div>
 </div>
