--- a/src/app/typewriter/typewriter.component.html
+++ b/src/app/typewriter/typewriter.component.html
@@ -8,5 +8,7 @@
     <button class="btn btn-outline-info ml-1" (click)="dodajNapis('b')"> b </button>
     <button class="btn btn-outline-info ml-1" (click)="utnijOstatnia()">
       <i class="fas fa-arrow-left"></i>  </button>
+    <button class="btn btn-outline-info ml-1" (click)="naDuze()">
+      <i class="fas fa-arrow-up"></i>  </button>
   </div>
 </div>
