--- a/src/app/biedronka/biedronka.component.html
+++ b/src/app/biedronka/biedronka.component.html
@@ -7,8 +7,10 @@
   </div>
   <div class="col-md-4">
     <button class="btn btn-info mt-2" style="width: 100%">Kasy</button>
-    <app-kasa></app-kasa>
-    <app-kasa></app-kasa>
-    <app-kasa></app-kasa>
+
+    <app-kasa [nr]="'pierwsza'"></app-kasa>
+    <app-kasa [nr]="'druga'"></app-kasa>
+    <app-kasa [nr]="'nieczynna'"></app-kasa>
+    <app-kasa [nr]="'zapasowa'"></app-kasa>
   </div>
 </div>
