--- a/src/app/kasa/kasa.component.html
+++ b/src/app/kasa/kasa.component.html
@@ -1,6 +1,6 @@
 <div class="card">
   <div class="card-header bg-dark">
-    Kasa nr {{nr}}
+    Kasa {{nr}}
   </div>
   <div class="card-body  bg-dark">
 
@@ -10,7 +10,7 @@
 
   <div class="card-footer  bg-dark">
     <button class="btn btn-outline-info" (click)="clients.push('aa')">(+)</button>
-    <button class="btn btn-outline-info" (click)="removeClient()">(-)</button>
+    <button class="btn btn-outline-info ml-1" (click)="removeClient()">(-)</button>
   </div>
 
 
