--- a/src/app/kasa/kasa.component.html
+++ b/src/app/kasa/kasa.component.html
@@ -9,6 +9,8 @@
   </div>
 
   <div class="card-footer  bg-dark">
+    Stan kasy: {{stanKasy}}
+    <br>
     <button class="btn btn-outline-info" (click)="clients.push('aa')">(+)</button>
     <button class="btn btn-outline-info ml-1" (click)="removeClient()">(-)</button>
   </div>
