--- a/src/app/biedronka/biedronka.component.html
+++ b/src/app/biedronka/biedronka.component.html
@@ -1,14 +1,14 @@
 <div class="row">
-  <div class="col-md-4">
+  <div class="col-md-3">
     aa
   </div>
-  <div class="col-md-4">
-    bb
+  <div class="col-md-5">
+    <app-hala></app-hala>
   </div>
   <div class="col-md-4">
     <button class="btn btn-info mt-2" style="width: 100%">Kasy</button>
 
-    <app-kasa [nr]="'pierwsza'"></app-kasa>
+    <app-kasa [nr]="'pierwsza'" [stanKasy]="10"></app-kasa>
     <app-kasa [nr]="'druga'"></app-kasa>
     <app-kasa [nr]="'nieczynna'"></app-kasa>
     <app-kasa [nr]="'zapasowa'"></app-kasa>
