--- a/src/app/hala/hala.component.less
+++ b/src/app/hala/hala.component.less
@@ -1,4 +1,4 @@
 card {
-  background: #010301 url('../../assets/biedronka_logo.png') no-repeat;
-  background-size: 400px;
+  //background: #010301 url('../../assets/biedronka_logo.png') no-repeat;
+  //background-size: 400px;
 }
