--- a/src/app/kasa/kasa.component.html
+++ b/src/app/kasa/kasa.component.html
@@ -2,7 +2,7 @@
   <div class="card-header bg-dark">
     Kasa {{nr}}
   </div>
-  <div class="card-body  bg-dark">
+  <div class="card-body  bg-dark" style="height: 60px">
 
     <i *ngFor="let c of kolejka" class="ml-1 fas fa-user-clock"></i>
 
