--- a/src/styles.less
+++ b/src/styles.less
@@ -14,6 +14,18 @@ body {
   background-color: rgba(255,255,255,0.1);
 }
 
+@very_transparent: rgba(0,0,0,0.1);
+
+@less_transparent: rgba(0,0,0,0.4);
+
+
+input {
+  background-color: @very_transparent;
+  color: white;
+}
+
+
+
 html {
   //font-size: 26px;
 }
