--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -23,6 +23,10 @@
         <a class="nav-link" href="#" routerLinkActive="active"  [routerLink]="['/biedronka']" >Biedronka
           <span class="sr-only">(contact)</span></a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#" routerLinkActive="active"  [routerLink]="['/de-admin']" >DE-Admin
+          <span class="sr-only">(contact)</span></a>
+      </li>
     </ul>
   </div>
 </nav>
