--- a/src/app/de-admin-panel/de-admin-panel.component.html
+++ b/src/app/de-admin-panel/de-admin-panel.component.html
@@ -3,5 +3,6 @@
   <div class="bg-dark card-body">
     <button class="btn-outline-info btn" (click)="loadUsers()">Wczytaj userow</button>
     <button class="btn-outline-info btn" (click)="loadPosts()">Wczytaj posty</button>
+    <button class="btn-outline-info btn" (click)="wywolajLogowanieTekstu()">Zaloguj</button>
   </div>
 </div>
