--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-dark trx">
-  <a class="navbar-brand" href="#">Web Start Template</a>
+  <a class="navbar-brand" href="#">JS2-2019</a>
   <button class="navbar-toggler" type="button"
           data-toggle="collapse"
           data-target="#navbarSupportedContent"
