--- a/src/app/de-admin-panel/de-admin-panel.component.html
+++ b/src/app/de-admin-panel/de-admin-panel.component.html
@@ -92,21 +92,21 @@
           <div class="form-group row">
             <label for="inputImie" class="col-sm-3 col-form-label">Imię</label>
             <div class="col-sm-9">
-              <input type="text" class="form-control" id="inputImie"
+              <input type="text" class="form-control" id="inputImie" name="first"
                      [(ngModel)]="nuser.firstName" placeholder="Imię">
             </div>
           </div>
           <div class="form-group row">
             <label for="inputNazwisko" class="col-sm-3 col-form-label">Nazwisko</label>
             <div class="col-sm-9">
-              <input type="text" class="form-control" id="inputNazwisko"
+              <input type="text" class="form-control" id="inputNazwisko" name="last"
                      [(ngModel)]="nuser.lastName" placeholder="Nazwisko">
             </div>
           </div>
           <div class="form-group row">
             <label for="inputWynik" class="col-sm-3 col-form-label">Grupa</label>
             <div class="col-sm-9">
-              <input type="text" class="form-control" id="inputWynik"
+              <input type="text" class="form-control" id="inputWynik" name="group"
                      [(ngModel)]="nuser.gid" placeholder="id grupy">
             </div>
           </div>
