--- a/src/app/de-admin-panel/de-admin-panel.component.html
+++ b/src/app/de-admin-panel/de-admin-panel.component.html
@@ -66,6 +66,9 @@
       </div>
 
       <div class="card-footer bg-dark">
+        <button class="btn btn-outline-info" data-toggle="modal" data-target="#addGroupModal">
+          Dodaj grupę
+        </button>
       </div>
 
     </div>
@@ -89,25 +92,25 @@
 
 
         <form>
-          <div class="form-group row">
+          <div class="form-group row text-light">
             <label for="inputImie" class="col-sm-3 col-form-label">Imię</label>
             <div class="col-sm-9">
               <input type="text" class="form-control" id="inputImie" name="first"
-                     [(ngModel)]="nuser.firstName" placeholder="Imię">
+                     [(ngModel)]="nuser.firstName">
             </div>
           </div>
-          <div class="form-group row">
+          <div class="form-group row text-light">
             <label for="inputNazwisko" class="col-sm-3 col-form-label">Nazwisko</label>
             <div class="col-sm-9">
               <input type="text" class="form-control" id="inputNazwisko" name="last"
-                     [(ngModel)]="nuser.lastName" placeholder="Nazwisko">
+                     [(ngModel)]="nuser.lastName">
             </div>
           </div>
-          <div class="form-group row">
+          <div class="form-group row text-light">
             <label for="inputWynik" class="col-sm-3 col-form-label">Grupa</label>
             <div class="col-sm-9">
               <input type="text" class="form-control" id="inputWynik" name="group"
-                     [(ngModel)]="nuser.gid" placeholder="id grupy">
+                     [(ngModel)]="nuser.gid">
             </div>
           </div>
         </form>
@@ -139,6 +142,23 @@
             </span>
 
 
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Porzuć</button>
+        <button type="button" class="btn btn-primary">Zapisz</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="modal text-dark" id="addGroupModal" tabindex="-1" role="dialog">
+  <div class="modal-dialog bg-dark" role="document">
+    <div class="modal-content bg-dark">
+      <div class="modal-header bg-dark text-white">
+        <h5 class="modal-title">Header</h5>
+      </div>
+      <div class="modal-body bg-dark">
+        (body)
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Porzuć</button>
