--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -13,7 +13,7 @@
   <div class="col-md-4">
 
     <div class="card">
-      <div class="card-header h4 bg-dark">
+      <div class="card-header h4 bg-dark" (mouseenter)="mouseEntered()">
         Dane kontaktowe
       </div>
       <div class="card-body bg-dark">
