--- a/src/app/de-admin-panel/de-admin-panel.component.html
+++ b/src/app/de-admin-panel/de-admin-panel.component.html
@@ -12,7 +12,7 @@
   <div class="col-md-6">
     <div class="card">
       <div class="card-header text-center">
-        <h4>Użytkownicy</h4>
+        <h4>Użytkownicy ({{users.length}} / akt: {{countOfActiveUsers()}})</h4>
       </div>
       <div class="card-body bg-dark">
         <table class="table table-sm table-hover table-dark">
