--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -27,6 +27,10 @@
         <a class="nav-link" href="#" routerLinkActive="active"  [routerLink]="['/de-admin']" >DE-Admin
           <span class="sr-only">(contact)</span></a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#" routerLinkActive="active"  [routerLink]="['/de-login']" >DE-Login
+          <span class="sr-only">(contact)</span></a>
+      </li>
     </ul>
   </div>
 </nav>
