Sortowanie scores tak by dla kazdego aliasu byl tylko jeden wynik

--- a/src/app/de-admin-panel/de-admin-panel.component.html
+++ b/src/app/de-admin-panel/de-admin-panel.component.html
@@ -71,6 +71,11 @@
         <button class="btn btn-outline-info" data-toggle="modal" data-target="#addGroupModal">
           Dodaj grupę
         </button>
+        <div>
+          <button class="btn btn-outline-success" (click)="sortUnique()">run</button>
+          {{nice()}}
+
+        </div>
       </div>
 
     </div>
