Działające edit-y... w komponencie zaliczenie

--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -35,6 +35,10 @@
         <a class="nav-link" href="#" routerLinkActive="active"  [routerLink]="['/passwords']" >Passwords
           <span class="sr-only">(contact)</span></a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#" routerLinkActive="active"  [routerLink]="['/zaliczenie']" >Zaliczenie
+          <span class="sr-only">(contact)</span></a>
+      </li>
     </ul>
   </div>
 </nav>
